--- a/front_end/twitter-app/src/app/components/nav-bar/nav-bar.component.html
+++ b/front_end/twitter-app/src/app/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar *ngIf="shouldBeShowed" class="navbar">
-  <img class="brand" routerLink="/home" src="http://www.twitlogo.com/c/9baa30ec00c78086eeab29941cc88db7.png">
+  <img class="brand" routerLink="/home" src="assets/images/twitterbabylogo.png">
   <span class="example-spacer"></span>
 
   <form matTooltip="Find an user through his/her username" class="form" (submit)="onSubmit()" autocomplete="off">
